syntax = "proto3";
option java_multiple_files = true;
package com.theara.grpc;

message StudentRequest {
  string firstName = 1;
  string lastName = 2;
  string gender = 3;
  int32 age = 4;
  string phoneNumber = 5;
}

message StudentResponse {
  string firstName = 1;
  string lastName = 2;
  string phoneNumber = 3;
}

service StudentService {
  rpc getStudent (StudentRequest) returns (StudentResponse);
}